--- a/symbiot-it-landing/src/App/views/Home/components/Solutions/Solutions.module.css
+++ b/symbiot-it-landing/src/App/views/Home/components/Solutions/Solutions.module.css
@@ -22,6 +22,11 @@
     border-radius: 8px;
     max-width: 300px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.solutionCard:hover {
+    transform: scale(1.05);
 }
 
 .solutionCard h3 {
